--- a/frontend/src/app/components/views/home/home.component.css
+++ b/frontend/src/app/components/views/home/home.component.css
@@ -6,7 +6,7 @@ main {
   display: block;
   top: 7vh;
   width: 100vw;
-  height: 270vh;
+  height: 300vh;
   margin-bottom: 50px;
 }
 
@@ -304,12 +304,12 @@ option{
 
 .todosProdutos {
   /*Inicio da grade de produtos*/
-  width: 80vw;
-  height: 125vh;
+  width: 90vw;
+  height: 155vh;
   position: relative;
   display: flex;
   top: 100px;
-  left: 10vw;
+  left: 5vw;
   right: 10vw;
   border-bottom: 45px solid transparent;
   flex-wrap: wrap;
@@ -328,12 +328,14 @@ option{
   position: relative;
   display: flex;
   top: 25px;
-  left: 1vw;
-  width: 220px;
-  height: 280px;
-  margin: 40px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  left: 5%;
+  justify-content: center;
+  transform: translate(-5%);
+  width: 250px;
+  height: 350px;
+  margin: 2px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   border-radius: 10px;
   border: 1px solid white;
   justify-content: space-between;
@@ -347,8 +349,10 @@ option{
 }
 
 .produto-single:hover {
+  left: 5%;
+  justify-content: center;
+  transform: translate(-5%);
   transition: 0.5s;
-  transform: scale(0.99);
   border: 1px solid rgb(0, 119, 255);
   box-shadow: #0040e2 0px 0.3px 10px 2px;
 }
