--- a/frontend/src/app/components/views/product/product.component.html
+++ b/frontend/src/app/components/views/product/product.component.html
@@ -3,9 +3,10 @@
       <div class="produto-single" *ngFor="let produto of produtos">
           <img class="imgP" [attr.src]="'http://localhost:3000/' + produto.produto_imagem" alt="img" />
           <div class="produto-descricao">{{ produto.descricao }}</div>
+          <div class="descricaoProduto">{{produto.descricaoProduto}}</div>
           <div class="produto-preco">{{produto.preco | currency : "BRL"}}</div>
           <button class="produto-adicionar" >COMPRAR</button>
-      </div>
 
+      </div>
     </div>
   </main>
