--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -16,7 +16,7 @@
     <span class="categorias">CATEGORIAS</span>
 
     <li class="li" *ngFor="let categoria of categorias">
-      <ul class="ul1">{{ categoria }}</ul>
+      <ul class="ul1">{{ categoria.categoria }}</ul>
       <ul class="ul2">{{ "FONE DE OUVIDO" }}</ul>
       <ul class="ul3">{{ "INFOMATICA" }}</ul>
       <ul class="ul4">{{ "CAPINHAS" }}</ul>
