--- a/frontend/src/app/components/views/home/home.component.css
+++ b/frontend/src/app/components/views/home/home.component.css
@@ -309,8 +309,9 @@ option{
   position: relative;
   display: flex;
   top: 100px;
-  left: 5vw;
-  right: 10vw;
+  left: 50%;
+  justify-content: center;
+  transform: translate(-50%);
   border-bottom: 45px solid transparent;
   flex-wrap: wrap;
   overflow-y: auto;
@@ -328,16 +329,12 @@ option{
   position: relative;
   display: flex;
   top: 25px;
-  left: 5%;
-  justify-content: center;
-  transform: translate(-5%);
   width: 250px;
   height: 350px;
-  margin: 2px;
+  margin: 15px;
   margin-top: 2px;
   margin-bottom: 2px;
   border-radius: 10px;
-  border: 1px solid white;
   justify-content: space-between;
   background-color: #ffffff;
   overflow: hidden;
@@ -345,15 +342,11 @@ option{
   color: #000;
   cursor: pointer;
   border: 1px solid transparent;
-  box-shadow: #343434 0px 0.3px 10px 2px;
 }
 
 .produto-single:hover {
-  left: 5%;
-  justify-content: center;
-  transform: translate(-5%);
   transition: 0.5s;
-  border: 1px solid rgb(0, 119, 255);
+  border: 0.5px solid #3b3b3b;
   box-shadow: #0040e2 0px 0.3px 10px 2px;
 }
 
@@ -372,6 +365,19 @@ option{
 .produto-img img:hover {
   transition: 0.5s;
   transform: scale(1.2);
+}
+
+.divisao {
+  position: absolute;
+  left: 2px;
+  top: 225px;
+  width: 100%;
+  height: 10px;
+  border-bottom: 1px solid rgb(214, 214, 214);
+}
+
+a {
+  color: #2a2a2a;
 }
 
 .produto-id{
