--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -16,7 +16,7 @@
     <span class="categorias">CATEGORIAS</span>
 
     <li class="li" *ngFor="let categoria of categorias">
-      <ul class="ul1">{{ categoria.descricao }}</ul>
+      <ul class="ul1">{{ categoria.categoria }}</ul>
     </li>
 
   </div>
