--- a/frontend/src/app/components/views/product/product.component.html
+++ b/frontend/src/app/components/views/product/product.component.html
@@ -1,12 +1,12 @@
 <main>
-    <div class="produto-escolhido" id="single">
-      <div class="produto-single" *ngFor="let produto of produtos">
-          <img class="imgP" [attr.src]="'http://localhost:3000/' + produto.produto_imagem" alt="img" />
-          <div class="produto-descricao">{{ produto.descricao }}</div>
-          <div class="descricaoProduto">{{produto.descricaoProduto}}</div>
-          <div class="produto-preco">{{produto.preco | currency : "BRL"}}</div>
-          <button class="produto-adicionar" >COMPRAR</button>
-
-      </div>
+  <div class="produto-escolhido" id="single">
+    <div class="produto-single" *ngFor="let produto of produtosid">
+      <img class="imgP" [attr.src]="'http://localhost:3000/' + produto.produto_imagem" alt="img" />
+      <span class="produto-id">id: {{ this.produto.id_produto }}</span>
+      <div class="produto-descricao">{{ this.produto.descricao }}</div>
+      <div class="descricaoProduto">{{ this.produto.descricaoProduto }}</div>
+      <div class="produto-preco">{{ this.produto.preco | currency : "BRL" }}</div>
+      <button class="produto-adicionar">COMPRAR</button>
     </div>
-  </main>
+  </div>
+</main>
