--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -108,15 +108,16 @@ header {
   width: 0px;
   height: 100vh;
   background: linear-gradient(180deg, rgb(53, 53, 53), rgb(0, 0, 0), rgb(53, 53, 53));
-  text-align: center;
+  text-align: left;
   color: aliceblue;
   z-index: 1;
-  transition: 0.3s;
+  transition: 0.6s;
 }
 
 #ativar:checked~.atalhos {
   width: 240px;
-  transition: 0.3s;
+  text-align: center;
+  transition: 0.6s;
 }
 
 .categorias {
@@ -133,23 +134,38 @@ header {
   line-height: 5vh;
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin-top: 0px;
   text-indent: 20px;
   cursor: pointer;
   color: white;
+  text-decoration: none;
+}
+
+.li:checked~.atalhos{
+  position: relative;
+  transition: 30ms;
 }
 
 .li .ul1:hover {
-  color: #ffbb00;
+  background-color: #ffbb00;
+  color: black;
+  transition: 0,3s;
+  word-break: keep-all;
+}
+
+.li .ul1:active {
+  background-color: #9c7302;
 }
 
 .category {
   display: flex;
   position: relative;
   color: white;
+  text-decoration: none;
 }
 
 .logo {
+  height: 50px;
   position: fixed;
   margin: 0px;
   padding: 0px;
