--- a/frontend/src/app/components/template/footer/footer.component.css
+++ b/frontend/src/app/components/template/footer/footer.component.css
@@ -3,7 +3,7 @@
 footer {
   position: relative;
   width: 100vw;
-  height: 300px;
+  height: 290px;
   left: 0;
   bottom: 0;
   border-top: 1px solid rgba(255, 255, 255, 0.675);
@@ -11,8 +11,8 @@ footer {
 
 .main-content {
   display: flex;
-  background: linear-gradient(rgb(255, 255, 255), rgb(255, 255, 255), rgb(191, 191, 191));
-  color: #3b3b3b;
+  background: linear-gradient(rgb(11, 11, 11), rgb(0, 0, 0), rgb(0, 0, 0));
+  color: #919191;
 }
 
 .main-content .box {
@@ -75,7 +75,6 @@ footer {
   background-color: #ffffff;
   color: rgb(0, 0, 0);
 }
-
 
 #f:hover {
   background: rgb(0, 119, 255);
