--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -17,17 +17,23 @@ header {
   box-shadow: 0px 5px 30px 5px #ffbb00;
 }
 
-#ativar {
-  display: none;
-}
-
-.menu {
+.menuAtivo {
   position: absolute;
   display: block;
   left: 0;
   width: 65px;
   height: 50px;
-  z-index: 1;
+  z-index: 5;
+  cursor: pointer;
+}
+
+.menuInativo {
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 65px;
+  height: 50px;
+  z-index: 4;
   cursor: pointer;
 }
 
@@ -36,7 +42,7 @@ header {
   left: 0;
   width: 65px;
   height: 50px;
-  z-index: 0;
+  z-index: 4;
 }
 
 .line1 {
@@ -84,23 +90,6 @@ header {
   background-color: #ffbb00;
 }
 
-#ativar:checked~.menu2 .line1 {
-  top: 25px;
-  transition: 0.3s;
-  transform: rotate(40deg)
-}
-
-#ativar:checked~.menu2 .line2 {
-  display: none;
-  transition: 0.3s;
-}
-
-#ativar:checked~.menu2 .line3 {
-  top: 21px;
-  transition: 0.3s;
-  transform: rotate(-40deg)
-}
-
 .atalhos {
   position: absolute;
   top: 51px;
@@ -110,14 +99,13 @@ header {
   background: linear-gradient(180deg, rgb(53, 53, 53), rgb(0, 0, 0), rgb(53, 53, 53));
   text-align: left;
   color: aliceblue;
-  z-index: 1;
+  z-index: 4;
   transition: 0.6s;
+  box-shadow: 2px 0px 0px 0px rgb(0, 21, 255);
 }
 
-#ativar:checked~.atalhos {
-  width: 240px;
-  text-align: center;
-  transition: 0.6s;
+.atalhosFundo {
+  height: 100vw;
 }
 
 .categorias {
@@ -135,7 +123,7 @@ header {
   display: flex;
   flex-direction: column;
   margin-top: 0px;
-  text-indent: 20px;
+  text-indent: 10%;
   cursor: pointer;
   color: white;
   text-decoration: none;
@@ -217,60 +205,46 @@ header {
   display: flex;
   justify-content: center;
   top: 20px;
-  width: 30px;
-  height: 26px;
+  width: 28px;
+  height: 28px;
   right: 120px;
   cursor: pointer;
-  color: #1f1f1f;
+  color: #ffffff;
   text-decoration: none;
   z-index: 1;
-}
-
-#lupa:hover {
-  border-collapse: 2px;
-  border-bottom: 3px solid rgb(255, 230, 0);
+  border-radius: 20px;
 }
 
 .pesquisa::-webkit-input-placeholder{
-  color: transparent;
+  color: rgb(44, 44, 44);
 }
 
 .pesquisa {
   position: absolute;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 0, 0, 0);
   right: 120px;
-  top: 15px;
-  width: 12px;
-  height: 30px;
+  top: 18px;
+  width: 5px;
+  height: 25px;
   border: none;
-  transition: 0.4s;
+  transition: 0.5s;
   border-radius: 150px;
-  padding-left: 20px;
+  padding-left: 22px;
+  border: 1px solid rgb(255, 255, 255);
 }
 
-#ativaPesquisa {
-  display: none;
-  border: transparent;
-}
-
-#ativaPesquisa:checked~#lupa{
-  color: #ffbb00;
-}
-
-#ativaPesquisa:checked~.pesquisa {
-  right: 25%;
+#lupas {
+  position: fixed;
+  display: flex;
   justify-content: center;
-  transform: translate(-25%);
-  width: 30vw;
-  height: 30px;
-  transition: 0.3s;
-}
-
-#ativaPesquisa:checked~.pesquisa::-webkit-input-placeholder {
-  width: 30vw;
-  height: 30px;
-  transition: 0.6s;
-  color: #353535;
+  top: 17px;
+  width: 28px;
+  height: 28px;
+  right: 118px;
+  cursor: pointer;
+  text-decoration: none;
+  z-index: 2;
+  border-radius: 20px;
 }
 
 #busca:focus, input:focus {
@@ -322,7 +296,6 @@ header {
   height: 100vh;
   transition: 0.4s;
 }
-
 
 .carrinho:hover+.compra {
   transition: 0.4s;
