--- a/frontend/src/app/components/views/home/home.component.html
+++ b/frontend/src/app/components/views/home/home.component.html
@@ -1,58 +1,17 @@
 <main>
-  <!--inicio da div slider-->
-  <div class="slider">
-    <div class="sliders">
-      <input type="radio" name="radio-btn" id="radio1" />
-      <input type="radio" name="radio-btn" id="radio2" />
-      <input type="radio" name="radio-btn" id="radio3" />
-      <input type="radio" name="radio-btn" id="radio4" />
-
-      <div class="slide first">
-        <img src="assets/img/5.jpg" alt="" />
-      </div>
-
-      <div class="slide">
-        <img src="assets/img/11.jpg" alt="" />
-      </div>
-
-      <div class="slide">
-        <img src="assets/img/5.jpg" alt="" />
-      </div>
-
-      <div class="slide">
-        <img src="assets/img/5.jpg" alt="" />
-      </div>
-
-      <div class="navauto">
-        <div class="auto-btn1"></div>
-        <div class="auto-btn2"></div>
-        <div class="auto-btn3"></div>
-        <div class="auto-btn4"></div>
-      </div>
-
-      <div class="navegar">
-        <label class="manual-btn" for="radio1"></label>
-        <label class="manual-btn" for="radio2"></label>
-        <label class="manual-btn" for="radio3"></label>
-        <label class="manual-btn" for="radio4"></label>
-      </div>
-    </div>
-  </div>
-
-  <!--fim da div slider-->
-
-  <span class="nomeProduto">Novidades</span>
+   <span class="nomeProduto">Novidades</span>
 
   <!--inicio do cards de produtos-->
 
   <div class="carrossel1">
     <div class="protutos-carrossel1" [ngStyle]="{ 'left': left + 'px' , 'width': width + 'px' }">
       <div class="card1" id="card1" *ngFor="let card1 of cards">
-        <a [routerLink]="['/product', this.card1.id_produto]">
+        <a [routerLink]="['/produtos', this.card1.id_produto]" routerLinkActive="router-link-active">
           <span class="produto-img"><img [attr.src]="'http://localhost:3000/' + card1.produto_imagem" alt="" /></span>
-          <span class="produto-id">id: {{ card1.id_produto }}</span>
           <span class="produto-descricao">{{ card1.descricao }}</span>
-          <span class="produto-preco">{{ card1.preco }}</span>
+          <span class="produto-id">{{card1.id_produto}}</span>
+          <span class="produto-preco">{{ card1.preco | currency : "BRL"  }}</span>
+          <span class="produto-estoque">ESTOQUE: {{ card1.estoque }}</span>
         </a>
       </div>
     </div>
@@ -67,20 +26,13 @@
   <!--fim do cards-->
 
   <span class="QuantprodutosLoja">
-    {{ getQuantidade() + " PRODUTOS ENCONTRADOS" }}
-    <span class="porPagina">Por Pagina: </span>
-    <select name="itensPagina" id="itensPagina">
-      <option value="p1" selected>12</option>
-      <option value="p2">24</option>
-      <option value="p3">36</option>
-      <option value="p4">48</option>
-    </select>
+    <span class="prod">{{ getQuantidade() + " Produtos" }}</span>
   </span>
 
   <!--inicio da div todosProdutos-->
   <div class="todosProdutos" id="single">
     <div class="produto-single" *ngFor="let produto of produtos">
-      <a [routerLink]="['/product', this.produto.id_produto]">
+      <a [routerLink]="['/produtos', this.produto.id_produto]">
         <div class="produto-img">
           <img class="img" [attr.src]="'http://localhost:3000/' + produto.produto_imagem" alt="img" />
         </div>
@@ -90,21 +42,36 @@
         <div class="produto-preco">{{ produto.preco | currency : "BRL" }}</div>
         <span class="produto-quantidade">Estoque: {{ produto.quantidade }}</span>
       </a>
-      <button class="produto-adicionar" (click)="adicionar($event)">{{produto.id_produto-1}}</button>
-      <button class="produto-remover" (click)="remover($event)">{{produto.id_produto-1}}</button>
+      <button class="produto-adicionar">{{' + '}}</button>
+      <button class="produto-remover">{{' - '}}</button>
+      <!--<button class="produto-adicionar" (click)="adicionar($event)">{{produto.id_produto-1}}</button>-->
+      <!--<button class="produto-remover" (click)="remover($event)">{{produto.id_produto-1}}</button>-->
     </div>
   </div>
   <!--fim da div todosProdutos-->
 
-  <!--paginação de produtos-->
-  <section id="paginacao">
-    <div class="pagination">
-      <button class="inicio" id="button">&#171;</button>
-      <button class="anterior" id="button">&lt;</button>
-      <div class="numeros" id="button2"></div>
-      <button class="proximo" id="button">&gt;</button>
-      <button class="final" id="button">&#187;</button>
-    </div>
-  </section>
-  <!--paginação de produtos-->
+    <span class="QuantprodutosLoja2">
+
+    <span class="prod">{{ getQuantidade() + " Produtos" }}</span>
+    <span class="porPagina">Por Pagina: </span>
+    <select name="itensPagina" id="itensPagina">
+      <option value="p1" selected>15</option>
+      <option value="p2">30</option>
+      <option value="p3">45</option>
+      <option value="p4">60</option>
+    </select>
+
+    <!--paginação de produtos-->
+    <section id="paginacao">
+      <div class="pagination">
+        <button class="inicio" id="button">&#171;</button>
+        <button class="anterior" id="button">&lt;</button>
+        <div class="numeros" id="button2"></div>
+        <button class="proximo" id="button">&gt;</button>
+        <button class="final" id="button">&#187;</button>
+      </div>
+    </section>
+    <!--paginação de produtos-->
+  </span>
+
 </main>
