--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -291,7 +291,7 @@ header {
   position: absolute;
   background-color: #fff;
   top: 50px;
-  width: 0vw;
+  width: 30vw;
   right: 0;
   height: 100vh;
   transition: 0.4s;
@@ -300,7 +300,7 @@ header {
 .carrinho:hover+.compra {
   transition: 0.4s;
   top: 50px;
-  width: 20vw;
+  width: 30vw;
   height: 100vh;
   z-index: -3;
 }
@@ -308,7 +308,7 @@ header {
 .compra:hover {
   transition: 0.4s;
   top: 50px;
-  width: 20vw;
+  width: 30vw;
   height: 100vh;
   z-index: -3;
 }
@@ -361,6 +361,112 @@ header {
   top: 10px;
   height: 30px;
   width: 30px;
+}
+
+.produto-single {
+  /*Container com todos os dados do produto*/
+  position: relative;
+  display: flex;
+  top: 5px;
+  width: 28vw;
+  height: 160px;
+  margin: 15px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  border-radius: 10px;
+  justify-content: space-between;
+  background-color: #ffffff;
+  overflow: hidden;
+  transition: 0.3s;
+  color: #000;
+  cursor: pointer;
+  border: 1px solid blue;
+}
+
+.produto-img img {
+border-radius: 08px;
+position: absolute;
+max-width: 100%;
+max-height: 94%;
+top: 5px;
+left: 5px;
+display: flex;
+transition: 0.8s;
+}
+
+.divisao {
+  position: absolute;
+  left: 2px;
+  top: 225px;
+  width: 100%;
+  height: 10px;
+  border-bottom: 1px solid rgb(251, 0, 0);
+}
+
+.produto-id{
+  position: absolute;
+  max-width: 100%;
+  max-height: 50%;
+  left: 170px;
+  top: 30px;
+  display: block;
+}
+
+.produto-descricao {
+  position: absolute;
+  max-width: 100%;
+  max-height: 50%;
+  left: 170px;
+  top: 50px;
+  display: block;
+}
+
+.produto-preco {
+  position: absolute;
+  max-width: 100%;
+  max-height: 50%;
+  left: 170px;
+  top: 100px;
+  font-size: 50px;
+  display: block;
+}
+a {
+  color: #2a2a2a;
+}
+
+.produto-adicionar {
+  position: absolute;
+  background-color: rgb(0, 119, 255);
+  text-align: center;
+  width: 30px;
+  height: 60px;
+  right: 10px;
+  top: 10px;
+  border-radius: 10%;
+  font-size: 25px;
+}
+
+
+
+.produto-remover {
+  position: absolute;
+  background-color: rgb(0, 119, 255);
+  text-align: center;
+  width: 30px;
+  height: 60px;
+  right: 10px;
+  top: 80px;
+  border-radius: 10%;
+  font-size: 25px;
+}
+
+.produto-quantidade {
+  position: absolute;
+  width: 150px;
+  height: 30px;
+  text-align: justify;
+  top: 80px;
+  left: 170px;
 }
 
 @media screen and (max-width: 500px) {
@@ -434,4 +540,8 @@ header {
     text-indent: 0%;
     color: rgb(97, 97, 97);
   }
+
+
+
+
 }
