--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -3,9 +3,12 @@
   <span class="menuInativo" [ngStyle]="{ 'z-index': this.zindexMenuInativo }"></span>
 
   <div class="menu2">
-    <div class="line1" [ngStyle]="{ 'top': this.top1 + 'px' , 'transition': transition + 's' , 'transform': transform1 , 'width': width1 + 'px'}"></div>
+    <div class="line1"
+      [ngStyle]="{ 'top': this.top1 + 'px' , 'transition': transition + 's' , 'transform': transform1 , 'width': width1 + 'px'}">
+    </div>
     <div class="line2" [ngStyle]="{ 'display': this.display , 'transition': transition + 's' }"></div>
-    <div class="line3" [ngStyle]="{ 'top': this.top3 + 'px' , 'transition': transition + 's' , 'transform': transform3 , 'width': width3 + 'px'}">
+    <div class="line3"
+      [ngStyle]="{ 'top': this.top3 + 'px' , 'transition': transition + 's' , 'transform': transform3 , 'width': width3 + 'px'}">
     </div>
   </div>
 
@@ -13,12 +16,13 @@
     <span class="categorias">CATEGORIAS</span>
     <ul class="li" *ngFor="let categoria of categorias">
 
-        <li class="ul1" [routerLink]="['/categoria']" routerLinkActive="router-link-active" >{{ categoria.categoria }}</li>
+      <li class="ul1" [routerLink]="['/categoria']" routerLinkActive="router-link-active">{{ categoria.categoria }}</li>
 
     </ul>
   </div>
 
-  <span class="atalhosFundo" [ngStyle]="{ 'width': this.width5 + '%' , 'z-index': this.zindex , 'background-color': this.fundo , 'opacity': this.opacity }"></span>
+  <span class="atalhosFundo"
+    [ngStyle]="{ 'width': this.width5 + '%' , 'z-index': this.zindex , 'background-color': this.fundo , 'opacity': this.opacity }"></span>
 
   <a [routerLink]="['/home']">
     <div class="logo">
@@ -28,7 +32,8 @@
   </a>
 
   <span class="material-symbols-outlined" id="lupas" [ngStyle]="{'z-index': zindexMenuAtivo }"></span>
-  <span class="material-symbols-outlined" id="lupa" [ngStyle]="{'z-index': zindexMenuInativo  , 'color': this.color }">search</span>
+  <span class="material-symbols-outlined" id="lupa"
+    [ngStyle]="{'z-index': zindexMenuInativo  , 'color': this.color }">search</span>
 
   <input type="text" class="pesquisa" id="busca" placeholder="Digite o nome do produto"
     [ngStyle]="{ 'width': this.width6 + '%' , 'background-color': backgroundcolor , 'transition': transition + 's' , 'border': border }">
@@ -36,12 +41,7 @@
   <a class="login" [routerLink]="['/login']">
     <span class="material-symbols-outlined" id="login">person</span>
   </a>
-  <a class="carrinho" [routerLink]="['/carrinho']">
+  <a class="carrinho" [routerLink]="['/shop']">
     <span class="material-symbols-outlined" id="carrinho">shopping_cart</span>
   </a>
-
-  <div class="compra">
-    <div id="itens">Meu Carrinho: </div>
-    <div class="produtos"></div>
-  </div>
 </header>
