--- a/frontend/src/app/components/views/home/home.component.css
+++ b/frontend/src/app/components/views/home/home.component.css
@@ -6,21 +6,24 @@ main {
   display: block;
   top: 7vh;
   width: 100vw;
-  height: 2300px;
+  height: 2363px;
+  padding: 0;
+  margin: 0;
   margin-bottom: 10px;
 }
 
 main::-webkit-scrollbar{
   display: none;
+  scroll-snap-stop: 0;
 }
 
 .todosProdutos {
   /*Inicio da grade de produtos*/
   width: 90vw;
-  height: 1474px;
+  height: 1700px;
   position: relative;
   display: flex;
-  top: 100px;
+  top: 90px;
   left: 50%;
   justify-content: center;
   transform: translate(-50%);
@@ -28,8 +31,6 @@ main::-webkit-scrollbar{
   flex-wrap: wrap;
   overflow-y: auto;
   color: white;
-  z-index: 1;
-  padding-bottom: 10px;
 }
 
 .todosProdutos::-webkit-scrollbar {
@@ -42,10 +43,8 @@ main::-webkit-scrollbar{
   display: flex;
   top: 25px;
   width: 250px;
-  height: 350px;
+  height: 370px;
   margin: 15px;
-  margin-top: 2px;
-  margin-bottom: 2px;
   border-radius: 10px;
   justify-content: space-between;
   background-color: #ffffff;
@@ -174,7 +173,6 @@ a {
   border-radius: 150px;
   padding-left: 20px;
   left: 20vw;
-  z-index: 2;
 }
 
 .nomeProduto {
@@ -281,7 +279,6 @@ a {
   border: 2px solid transparent;
   box-shadow: #343434 0px 0.3px 10px 2px;
   transition: 1.6s;
-  z-index: 5;
 }
 
 .card1:hover{
@@ -294,7 +291,7 @@ a {
 }
 
 .QuantprodutosLoja {
-  position: relative;
+  position: absolute;
   display: flex;
   width: 80vw;
   height: 55px;
@@ -311,7 +308,7 @@ a {
 }
 
 .QuantprodutosLoja2 {
-  position: absolute;
+  position: relative;
   display: flex;
   width: 100vw;
   height: 55px;
@@ -325,7 +322,7 @@ a {
   border-bottom: 1px solid #008cff;
   box-shadow: 0px 15px 2px 10px rgb(0, 0, 255);
   z-index: 0;
-  bottom: 41px;
+  bottom: -80px;
 }
 
 #paginacao {
@@ -405,7 +402,6 @@ option{
   font-size: 20px;
   top: 3px;
   transition: 0.7s;
-  background-color: white;
 }
 
 #button2 {
@@ -439,6 +435,7 @@ option{
   transition: 0.3s;
   transform: scale(0.8);
 }
+
 
 #button::before
 
