--- a/frontend/src/app/components/views/shop/shop.component.html
+++ b/frontend/src/app/components/views/shop/shop.component.html
@@ -1,19 +1,18 @@
-<main>
-    <div class="todosProdutos" id="single">
-      <span class="divisao">Meu Carrinho</span>
-      <div class="produto-single" *ngFor="let produtoCar of produtosCarrinho">
-  
-        <div class="produto-img">
-          <img class="img" [attr.src]="'http://localhost:3000/' + produtoCar.produto_imagem" alt="" />
-        </div>
-        <div class="id">codigo: {{produtoCar.id_produto}}</div>
-        <div class="produto-descricao">{{ produtoCar.descricao }}</div>
-        <div class="produto-preco">{{ produtoCar.preco | currency : "BRL" }}</div>
-        <span class="quantidade"></span>
-          <button class="produto-adicionar">Adicionar</button>
-          <button class="produto-remover">Remover</button>
+<div class="compra">
+  <div id="itens">Meu Carrinho: </div>
+
+  <div class="produto-single" *ngFor="let produto of produtos">
+    <a [routerLink]="['/produtos', this.produto.id_produto]">
+      <div class="produto-img">
+        <img class="img" [attr.src]="'http://localhost:3000/' + produto.produto_imagem" alt="img" />
       </div>
-      <span class="subTotal">Subtotal R$ 0,00</span>
-    </div>
-  </main>
-  
+      <span class="divisao"></span>
+      <span class="produto-id" name="id">id: {{ produto.id_produto }}</span>
+      <div class="produto-descricao">{{ produto.descricao }}</div>
+      <div class="produto-preco">{{ produto.preco | currency : "BRL" }}</div>
+      <span class="produto-quantidade">Quantidade: {{ produto.quantidade }}</span>
+    </a>
+    <button class="produto-adicionar" (click)="shopAdd( produto['id_produto'] )"> + </button>
+    <button class="produto-remover" (click)="remover( produto['id_produto'] )"> - </button>
+  </div>
+</div>
