--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,8 +5,9 @@
     overflow-x: hidden;
   }
 
+
   html, body {
-    height: 100%;
+    height: 2463px;
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
   }
@@ -56,6 +57,10 @@
   }
 
   #butto::before
+
+  #butto::selection {
+    color: blueviolet;
+  }
 
   .list {
     display: block;
